--- a/betting.html
+++ b/betting.html
@@ -10,6 +10,7 @@
     <body>
         <iframe src=https://docs.google.com/spreadsheets/d/1VC50K3svQa7I_0dTeMX8mVryd9eWrgc-9IfCTsl0szE/edit?usp=sharingid=74e8bb60ad4e38d6a1b0dc865d7197ff width='500' height='500' frameborder='1000' style='background:#F5F3F5;padding:20px;'></iframe>
         
+        <iframe src=https://homepage.divms.uiowa.edu/~mbognar/applets/pois.html></iframe>
         
     </body>
    <script type="text/javascript" id="WolframAlphaScript74e8bb60ad4e38d6a1b0dc865d7197ff" src="//www.wolframalpha.com/widget/widget.jsp?id=74e8bb60ad4e38d6a1b0dc865d7197ff"></script>
